Make the plaintext serializer properly handle CDATA nodes.  Bug 234427, patch by Sebastian Redl <wasti.redl@gmx.net>, r=akkana, sr=bzbarsky